kustomizations/monitoring/redisinsight.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redisinsight
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redisinsight
  template:
    metadata:
      labels:
        app: redisinsight
    spec:
      enableServiceLinks: false
      containers:
      - name: redisinsight
        image: redis/redisinsight:latest
        ports:
        - containerPort: 5540
        volumeMounts:
        - name: redisinsight
          mountPath: /data
      volumes:
      - name: redisinsight
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: redisinsight
spec:
  type: ClusterIP
  ports:
  - port: 5540
    targetPort: 5540
  selector:
    app: redisinsight
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redisinsight
  namespace: monitoring
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
  - host: cache.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: redisinsight
            port:
              number: 5540
